#33: add testSuccessfulJavaCompilation